--- a/Views/ShoppingCart/BagCart.cshtml
+++ b/Views/ShoppingCart/BagCart.cshtml
@@ -1,3 +1,3 @@
 ﻿@model WebApplication1.Models.Carts
-<span style="color:black">@ViewBag.infoCart</span>
+<span style="color:black" class="text-red-600 font-semibold">@ViewBag.infoCart</span>
 
