Update ShoppingController, UserController, Details_Info, Shopping/ShoppingSuccess, ShowToCart

--- a/Views/Shopping/ShowToCart.cshtml
+++ b/Views/Shopping/ShowToCart.cshtml
@@ -147,7 +147,7 @@
                 else
                 {
                     <a class="btn bg-blue-600 hover:bg-blue-800 w-full rounded-md text-white text-center text-md font-medium text-md py-3 mt-2 " href="/Shopping/GetInfo">Checkout	•	$@Session["Temp_Total"]</a>
-                    @*<a class="btn bg-blue-600 hover:bg-blue-800 w-full rounded-md text-white text-center text-md font-medium text-md py-3 mt-2 " href="/Payment/CreatePayment">Paypal</a>*@
+                    <a class="btn bg-blue-600 hover:bg-blue-800 w-full rounded-md text-white text-center text-md font-medium text-md py-3 mt-2 " href="/Payment/CreatePayment">Paypal</a>
                 }
 
 
