--- a/Views/Shopping/ShoppingSuccess.cshtml
+++ b/Views/Shopping/ShoppingSuccess.cshtml
@@ -58,11 +58,18 @@
             }
 
         </div>
-
         <div class="d-flex justify-content-between mb-2">
             <p>Shipping</p>
             <p>$@Session["Shipping"]</p>
         </div>
+        @if (Session["UserDiscount"] != null)
+        {
+            <div class="d-flex justify-content-between my-2">
+                <p>User Discount</p>
+                <p>$@Session["UserDiscount"]</p>
+            </div>
+        }
+
 
         <div class="d-flex justify-content-between pb-2 mb-2 border-b">
             <p>Discount</p>
@@ -75,10 +82,16 @@
                 <p>$00.0</p>
             }
         </div>
+
         <div class="d-flex justify-content-between my-2">
             <p>Subtotal</p>
             <p>$@Session["Total_Price"]</p>
         </div>
+
+
+
+
+
         <a href="/Home/Index">
             <div class="cursor-pointer w-full rounded-md text-center py-3 bg-yellow-300 text-md font-semibold my-3">Continuous Shopping</div><br />
         </a>
