Update Review, Shopping success, Cancel Order

--- a/Views/Home/Details_Pro.cshtml
+++ b/Views/Home/Details_Pro.cshtml
@@ -4,6 +4,15 @@
     ViewBag.Title = "Details_Pro";
 }
 
+<style>
+    div.ex3 {
+        background-color: white;
+        width: auto;
+        height: 510px;
+        overflow: auto;
+    }
+</style>
+
 @Html.Partial("_Notifications")
 
 <script type="text/javascript">
@@ -167,90 +176,96 @@
                 <div class="col-span-2 m-4">
                     <p class="text-3xl font-bold mb-4">Feedbacks</p>
 
-                    <div class="rounded-md p-4 border">
+                    <div class="rounded-md p-4 border ex3">
 
-                        @foreach (var item in ViewData["feedback"] as List<WebApplication1.Models.feedback>)
+                        @foreach (var item in (ViewData["feedback"] as List<WebApplication1.Models.feedback>).OrderByDescending(x => x.id_feedback))
                         {
+                            if (item.content != null || item.content == "")
+                            {
+                                <div class="border-b ">
+                                    <div class="flex items-center mb-1">
+                                        @if (item.user.names == null)
+                                        {
+                                            <div class="mr-4 font-medium text-lg">Anonymous</div>
+                                        }
+                                        else
+                                        {
+                                            <div class="mr-4 font-medium text-lg">@item.user.names</div>
+                                        }
 
 
-                            <div class="border-b">
-                                <div class="flex items-center mb-1">
-                                    @if (item.user.names == null)
-                                    {
-                                        <div class="mr-4 font-medium text-lg">Anonymous</div>
-                                    }
-                                    else
-                                    {
-                                        <div class="mr-4 font-medium text-lg">@item.user.names</div>
-                                    }
-
-
-                                    @for (int i = 0; i < item.rate; i++)
-                                    {
-                                        <svg aria-hidden="true" class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Star</title><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
-                                    }
-                                </div>
-                                <div class="mb-3 text-gray-500 dark:text-gray-400">
-                                    <p>
-                                        <time>@item.created_at</time>
+                                        @for (int i = 0; i < item.rate; i++)
+                                        {
+                                            <svg aria-hidden="true" class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Star</title><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
+                                        }
+                                    </div>
+                                    <div class="mb-3 text-gray-500 dark:text-gray-400">
+                                        <p>
+                                            <time>@item.created_at</time>
+                                        </p>
+                                    </div>
+                                    <p class="mb-2 font-medium text-dark text-base">
+                                        @item.content
                                     </p>
                                 </div>
-                                <p class="mb-2 font-medium text-dark text-base">
-                                    @item.content
-                                </p>
-                            </div>
+                            }
+
                         }
                     </div>
                 </div>
 
                 <div class="col-span-2 m-4">
 
-                    @*<div class="row">
-                            <div class="flex items-center mb-3">
+                    <div class="row">
+                        <div class="flex items-center mb-3">
+
+                            @for (int i = 0; i < (int)Session["avg2"]; i++)
+                            {
                                 <i class="fa-solid fa-star text-yellow-500"></i>
-                                <i class="fa-solid fa-star text-yellow-500"></i>
-                                <i class="fa-solid fa-star text-yellow-500"></i>
-                                <i class="fa-solid fa-star text-yellow-500"></i>
-                                <i class="fa-solid fa-star text-yellow-500"></i>
-                                <p class="ml-2 font-medium text-gray-900 dark:text-white">5 out of 5</p>
+                            }
+                            @if ((double)Session["avg"] > (int)Session["avg2"])
+                            {
+                                <i class="fa-solid fa-star-half text-yellow-500"></i>
+                            }
+                            <p class="ml-2 font-medium text-gray-900 dark:text-white">@Session["avg"] out of 5</p>
+                        </div>
+                        <p class="font-medium text-gray-500">@Session["count"] Reviewers</p>
+                        <div class="flex items-center mt-4">
+                            <span class="font-medium text-blue-600 dark:text-blue-500">5 star</span>
+                            <div class="w-2/3 h-5 mx-4 bg-gray-200 rounded dark:bg-gray-700">
+                                <div class="h-5 bg-yellow-300 rounded" style="width:@Session["5"]"></div>
                             </div>
-                            <p class="font-medium text-gray-500">1,745 global ratings</p>
-                            <div class="flex items-center mt-4">
-                                <span class="font-medium text-blue-600 dark:text-blue-500">5 star</span>
-                                <div class="w-2/3 h-5 mx-4 bg-gray-200 rounded dark:bg-gray-700">
-                                    <div class="h-5 bg-yellow-300 rounded" style="width: 70%"></div>
-                                </div>
-                                <span class="font-medium text-blue-600 dark:text-blue-500">70%</span>
+                            <span class="font-medium text-blue-600 dark:text-blue-500">@Session["rate5"] </span>
+                        </div>
+                        <div class="flex items-center mt-4">
+                            <span class="font-medium text-blue-600 dark:text-blue-500">4 star</span>
+                            <div class="w-2/3 h-5 mx-4 bg-gray-200 rounded dark:bg-gray-700">
+                                <div class="h-5 bg-yellow-300 rounded" style="width: @Session["4"]"></div>
                             </div>
-                            <div class="flex items-center mt-4">
-                                <span class="font-medium text-blue-600 dark:text-blue-500">4 star</span>
-                                <div class="w-2/3 h-5 mx-4 bg-gray-200 rounded dark:bg-gray-700">
-                                    <div class="h-5 bg-yellow-300 rounded" style="width: 17%"></div>
-                                </div>
-                                <span class="font-medium text-blue-600 dark:text-blue-500">17%</span>
+                            <span class="font-medium text-blue-600 dark:text-blue-500">@Session["rate4"] </span>
+                        </div>
+                        <div class="flex items-center mt-4">
+                            <span class="font-medium text-blue-600 dark:text-blue-500">3 star</span>
+                            <div class="w-2/3 h-5 mx-4 bg-gray-200 rounded dark:bg-gray-700">
+                                <div class="h-5 bg-yellow-300 rounded" style="width: @Session["3"]"></div>
                             </div>
-                            <div class="flex items-center mt-4">
-                                <span class="font-medium text-blue-600 dark:text-blue-500">3 star</span>
-                                <div class="w-2/3 h-5 mx-4 bg-gray-200 rounded dark:bg-gray-700">
-                                    <div class="h-5 bg-yellow-300 rounded" style="width: 8%"></div>
-                                </div>
-                                <span class="font-medium text-blue-600 dark:text-blue-500">8%</span>
+                            <span class="font-medium text-blue-600 dark:text-blue-500">@Session["rate3"] </span>
+                        </div>
+                        <div class="flex items-center mt-4">
+                            <span class="font-medium text-blue-600 dark:text-blue-500">2 star</span>
+                            <div class="w-2/3 h-5 mx-4 bg-gray-200 rounded dark:bg-gray-700">
+                                <div class="h-5 bg-yellow-300 rounded" style="width: @Session["2"]"></div>
                             </div>
-                            <div class="flex items-center mt-4">
-                                <span class="font-medium text-blue-600 dark:text-blue-500">2 star</span>
-                                <div class="w-2/3 h-5 mx-4 bg-gray-200 rounded dark:bg-gray-700">
-                                    <div class="h-5 bg-yellow-300 rounded" style="width: 4%"></div>
-                                </div>
-                                <span class="font-medium text-blue-600 dark:text-blue-500">4%</span>
+                            <span class="font-medium text-blue-600 dark:text-blue-500">@Session["rate2"] </span>
+                        </div>
+                        <div class="flex items-center mt-4">
+                            <span class="font-medium text-blue-600 dark:text-blue-500">1 star</span>
+                            <div class="w-2/3 h-5 mx-4 bg-gray-200 rounded dark:bg-gray-700">
+                                <div class="h-5 bg-yellow-300 rounded" style="width: @Session["1"]"></div>
                             </div>
-                            <div class="flex items-center mt-4">
-                                <span class="font-medium text-blue-600 dark:text-blue-500">1 star</span>
-                                <div class="w-2/3 h-5 mx-4 bg-gray-200 rounded dark:bg-gray-700">
-                                    <div class="h-5 bg-yellow-300 rounded" style="width: 1%"></div>
-                                </div>
-                                <span class="font-medium text-blue-600 dark:text-blue-500">1%</span>
-                            </div>
-                        </div>*@
+                            <span class="font-medium text-blue-600 dark:text-blue-500">@Session["rate1"] </span>
+                        </div>
+                    </div>
 
                     <p class="text-3xl font-bold mb-4">Write a review</p>
                     <div class="rounded-md m-2 p-4 border">
