--- a/Views/products/Details.cshtml
+++ b/Views/products/Details.cshtml
@@ -7,7 +7,7 @@
 
 
 <div class="w-75 rounded-md grid grid-cols-3 border mx-auto my-5 p-5 h-screen">
-    <h1 class="col-span-3 ml-4">Delete</h1>
+    <h1 class="col-span-3 ml-4">Details</h1>
     <img class="object-center col-span-1"
          src="~/wwwroot/Images/Products/@Html.DisplayFor(x=>x.images)"
          alt="" />
