--- a/Views/users/Index.cshtml
+++ b/Views/users/Index.cshtml
@@ -75,7 +75,7 @@
                     </a>
                 </div>
                 <div class="p-3 text-sm rounded-lg bg-blue-600 text-white">
-                    <a href="/users/Delete/@item.id_user" class="ms-1 text-white rounded">
+                    <a href="/users/Details/@item.id_user" class="ms-1 text-white rounded">
                         <i class="fa-solid fa-info"></i>
                     </a>
                 </div>
