--- a/Views/Home/Details_Pro.cshtml
+++ b/Views/Home/Details_Pro.cshtml
@@ -8,7 +8,7 @@
     div.ex3 {
         background-color: white;
         width: auto;
-        height: 510px;
+        height: 530px;
         overflow: auto;
     }
 </style>
@@ -111,8 +111,8 @@
                         <h3 class="sr-only">Reviews</h3>
                         <div class="flex items-center mb-1">
                             <svg aria-hidden="true" class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>First star</title><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
-                            <h3 class="ml-2 font-semibold">@Html.DisplayFor(model => model.rate)</h3>
-                            <h3 class="ml-4 text-blue-600 dark:text-white">1,745 reviews</h3>
+                            <h3 class="ml-2 font-semibold">@Session["avg"]</h3>
+                            <h3 class="ml-4 text-blue-600 dark:text-white">@Session["count"] reviews</h3>
                             <div class="text-gray-300 font-semibold ml-4">Available: @Html.DisplayFor(model => model.quantity)</div>
                         </div>
                     </div>
@@ -267,7 +267,7 @@
                         </div>
                     </div>
 
-                    <p class="text-3xl font-bold mb-4">Write a review</p>
+                    <p class="text-3xl font-bold my-4">Write a review</p>
                     <div class="rounded-md m-2 p-4 border">
                         @using (Html.BeginForm("Feedbacks", "Home", FormMethod.Post, new { onsubmit = "retun VerifyRating()" }))
                         {
