--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+﻿﻿@{
     ViewData["Title"] = "Home Page";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -137,9 +137,9 @@
                             <div class="flex flex-row justify-between pb-3 border-bottom align-items-center">
                                 @if (item.id_promo != null)
                                 {
-                                    decimal a = Convert.ToDecimal(item.price.Value * (100 - item.promocode.discount_price.Value) / 100);
+                                    decimal a = Math.Round(Convert.ToDecimal(item.price.Value * (100 - item.promocode.discount_price.Value) / 100));
 
-                                    <p class="text-2xl text-red-600">$@a</p>
+                                    <p class="text-2xl text-red-600">$@a.00</p>
                                     <del class="text-xl-start text-gray-500">$@Html.DisplayFor(modelItem => item.price)</del>
                                     <div class="bg-danger py-2 px-3 rounded-md text-white">
                                         <p>-@Html.DisplayFor(modelItem => item.promocode.discount_price)%</p>
@@ -151,23 +151,33 @@
                                 }
                             </div>
 
-                            <h5 class="mt-4 mb-3 flex leading-tight text-neutral-800 dark:text-neutral-50 justify-between"></h5>
+                            <h5 class="mt-4 mb-3 flex leading-tight text-neutral-800 dark:text-neutral-50 justify-between">
                                 <div class="text-xl">@Html.DisplayFor(modelItem => item.names)</div>
                                 <div class="flex flex-row">
-                                    <p class="px-2">@Html.DisplayFor(modelItem => item.rate)</p>
-                                    <i class="fa-solid fa-star text-warning"></i>
+                                    @for (int i = 0; i < (int)item.rate; i++)
+                                    {
+                                        <i class="fa-solid fa-star text-yellow-500"></i>
+                                    }
+                                    @if ((double)item.rate > (int)item.rate)
+                                    {
+                                        <i class="fa-solid fa-star-half text-yellow-500"></i>
+                                    }
                                 </div>
-                         
+                            </h5>
+                          
+
+
                             <div class="my-3 flex text-xs items-center justify-between">
                                 <div class="text-start">
                                     <span class="p-2 rounded-full" style="border: 2px solid #0026ff; color: #0026ff">@Html.DisplayFor(modelItem => item.brand)</span>
                                     <span class="p-2 rounded-full" style="border: 2px solid #ffd800; color: #ffd800 ">@Html.DisplayFor(modelItem => item.color)</span>
                                 </div>
-                                
+
                                 <div>
                                     <a href="/Home/Details_Pro/@item.id_product" class="py-2 px-3 text-sm bg-blue-600 text-white rounded-full">View</a>
                                 </div>
                             </div>
+                          
                         </div>
                     </div>
                 </div>
