--- a/Views/Home/SearchPage.cshtml
+++ b/Views/Home/SearchPage.cshtml
@@ -109,8 +109,14 @@
                                     <h5 class="mt-4 mb-3 flex leading-tight text-neutral-800 dark:text-neutral-50 justify-between">
                                         <div class="text-xl">@Html.DisplayFor(modelItem => item.names)</div>
                                         <div class="flex flex-row">
-                                            <p class="px-2">@Html.DisplayFor(modelItem => item.rate)</p>
-                                            <i class="fa-solid fa-star text-warning"></i>
+                                            @for (int i = 0; i < (int)item.rate; i++)
+                                            {
+                                                <i class="fa-solid fa-star text-yellow-500"></i>
+                                            }
+                                            @if ((double)item.rate > (int)item.rate)
+                                            {
+                                                <i class="fa-solid fa-star-half text-yellow-500"></i>
+                                            }
                                         </div>
                                     </h5>
                                     <div class="my-3 flex text-xs items-center justify-between">
