--- a/Views/orders/Index.cshtml
+++ b/Views/orders/Index.cshtml
@@ -26,7 +26,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
+        @foreach (var item in Model.OrderByDescending(x=>x.created_at))
         {
             <tr>
                 <td>
