--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -16,7 +16,7 @@
         </ul>
         <div id="defaultTabContent">
             <div class="hidden p-4 bg-white rounded-lg md:p-8 dark:bg-gray-800" id="about" role="tabpanel" aria-labelledby="about-tab">
-                <h2 class="mb-3 text-3xl font-extrabold tracking-tight text-gray-900 dark:text-white">Powering innovation & trust at 200,000+ companies worldwide</h2>
+                <h2 class="mb-3 text-3xl font-extrabold tracking-tight text-gray-900">Powering innovation & trust at 200,000+ companies worldwide</h2>
                 <p class="mb-3 text-gray-500 dark:text-gray-400">Empower Developers, IT Ops, and business teams to collaborate at high velocity. Respond to changes and deliver great customer and employee service experiences fast.</p>
                 <a href="#" class="inline-flex items-center font-medium text-blue-600 hover:text-blue-800 dark:text-blue-500 dark:hover:text-blue-700">
                     Learn more
@@ -24,7 +24,7 @@
                 </a>
             </div>
             <div class="hidden p-4 bg-white rounded-lg md:p-8 dark:bg-gray-800" id="services" role="tabpanel" aria-labelledby="services-tab">
-                <h2 class="mb-5 text-2xl font-extrabold tracking-tight text-gray-900 dark:text-white">We invest in the world’s potential</h2>
+                <h2 class="mb-5 text-2xl font-extrabold tracking-tight text-gray-900">We invest in the world’s potential</h2>
                 <!-- List -->
                 <ul role="list" class="space-y-4 text-gray-500 dark:text-gray-400">
                     <li class="flex space-x-2">
@@ -50,7 +50,7 @@
                 </ul>
             </div>
             <div class="hidden p-4 bg-white rounded-lg md:p-8 dark:bg-gray-800" id="statistics" role="tabpanel" aria-labelledby="statistics-tab">
-                <dl class="grid max-w-screen-xl grid-cols-2 gap-8 p-4 mx-auto text-gray-900 sm:grid-cols-3 xl:grid-cols-6 dark:text-white sm:p-8">
+                <dl class="grid max-w-screen-xl grid-cols-2 gap-8 p-4 mx-auto text-gray-900 sm:grid-cols-3 xl:grid-cols-6 sm:p-8">
                     <div class="flex flex-col">
                         <dt class="mb-2 text-3xl font-extrabold">73M+</dt>
                         <dd class="font-light text-gray-500 dark:text-gray-400">Developers</dd>
