--- a/Views/Home/Details_Pro.cshtml
+++ b/Views/Home/Details_Pro.cshtml
@@ -112,7 +112,7 @@
                         <div class="flex items-center mb-1">
                             <svg aria-hidden="true" class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>First star</title><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
                             <h3 class="ml-2 font-semibold">@Session["avg"]</h3>
-                            <h3 class="ml-4 text-blue-600 dark:text-white">@Session["count"] reviews</h3>
+                            <h3 class="ml-4 text-blue-600">@Session["count"] reviews</h3>
                             <div class="text-gray-300 font-semibold ml-4">Available: @Html.DisplayFor(model => model.quantity)</div>
                         </div>
                     </div>
@@ -143,7 +143,7 @@
 
 
                                 <a href="#">
-                                    <div style="text-decoration:none; color:black;text-align:center" class="p-3 rounded-md bg-gray-100 hover:bg-gray-200 font-medium" )">OUt of Stock</div>
+                                    <div style="text-decoration:none; color:black;text-align:center" class="p-3 rounded-md bg-gray-100 hover:bg-gray-100 font-medium" )">OUt of Stock</div>
                                 </a>
                             }
                             else
@@ -155,7 +155,7 @@
                                         <div style="text-decoration:none; color:black;text-align:center" class="p-3 rounded-md bg-blue-600 hover:bg-blue-700 text-light text-center font-medium" )">Buy</div>
                                     </a>
                                     <a href="/Shopping/AddToCart/@Html.DisplayFor(model => model.id_product)">
-                                        <div style="text-decoration:none; color:black;text-align:center" class="p-3 rounded-md bg-gray-100 hover:bg-gray-200 font-medium" )">Add To Cart</div>
+                                        <div style="text-decoration:none; color:black;text-align:center" class="p-3 rounded-md bg-gray-100 hover:bg-gray-100 font-medium" )">Add To Cart</div>
                                     </a>
                                 }
                                 else
@@ -164,7 +164,7 @@
                                         <div style="text-decoration:none; color:black;text-align:center" class="p-3 rounded-md bg-blue-600 hover:bg-blue-700 text-light text-center font-medium" )">Buy</div>
                                     </a>
                                     <a href="/ShoppingCart/AddToCart/@Html.DisplayFor(model => model.id_product)">
-                                        <div style="text-decoration:none; color:black;text-align:center" class="p-3 rounded-md bg-gray-100 hover:bg-gray-200 font-medium" )">Add To Cart</div>
+                                        <div style="text-decoration:none; color:black;text-align:center" class="p-3 rounded-md bg-gray-100 hover:bg-gray-100 font-medium" )">Add To Cart</div>
                                     </a>
                                 }
                             }
@@ -227,43 +227,43 @@
                             {
                                 <i class="fa-solid fa-star-half text-yellow-500"></i>
                             }
-                            <p class="ml-2 font-medium text-gray-900 dark:text-white">@Session["avg"] out of 5</p>
+                            <p class="ml-2 font-medium text-gray-900">@Session["avg"] out of 5</p>
                         </div>
                         <p class="font-medium text-gray-500">@Session["count"] Reviewers</p>
                         <div class="flex items-center mt-4">
-                            <span class="font-medium text-blue-600 dark:text-blue-500">5 star</span>
-                            <div class="w-2/3 h-5 mx-4 bg-gray-200 rounded dark:bg-gray-700">
+                            <span class="font-medium text-blue-600 ">5 star</span>
+                            <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
                                 <div class="h-5 bg-yellow-300 rounded" style="width:@Session["5"]"></div>
                             </div>
-                            <span class="font-medium text-blue-600 dark:text-blue-500">@Session["rate5"] </span>
+                            <span class="font-medium text-blue-600 ">@Session["rate5"] </span>
                         </div>
                         <div class="flex items-center mt-4">
-                            <span class="font-medium text-blue-600 dark:text-blue-500">4 star</span>
-                            <div class="w-2/3 h-5 mx-4 bg-gray-200 rounded dark:bg-gray-700">
+                            <span class="font-medium text-blue-600 ">4 star</span>
+                            <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
                                 <div class="h-5 bg-yellow-300 rounded" style="width: @Session["4"]"></div>
                             </div>
-                            <span class="font-medium text-blue-600 dark:text-blue-500">@Session["rate4"] </span>
+                            <span class="font-medium text-blue-600 ">@Session["rate4"] </span>
                         </div>
                         <div class="flex items-center mt-4">
-                            <span class="font-medium text-blue-600 dark:text-blue-500">3 star</span>
-                            <div class="w-2/3 h-5 mx-4 bg-gray-200 rounded dark:bg-gray-700">
+                            <span class="font-medium text-blue-600 ">3 star</span>
+                            <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
                                 <div class="h-5 bg-yellow-300 rounded" style="width: @Session["3"]"></div>
                             </div>
-                            <span class="font-medium text-blue-600 dark:text-blue-500">@Session["rate3"] </span>
+                            <span class="font-medium text-blue-600 ">@Session["rate3"] </span>
                         </div>
                         <div class="flex items-center mt-4">
-                            <span class="font-medium text-blue-600 dark:text-blue-500">2 star</span>
-                            <div class="w-2/3 h-5 mx-4 bg-gray-200 rounded dark:bg-gray-700">
+                            <span class="font-medium text-blue-600 ">2 star</span>
+                            <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
                                 <div class="h-5 bg-yellow-300 rounded" style="width: @Session["2"]"></div>
                             </div>
-                            <span class="font-medium text-blue-600 dark:text-blue-500">@Session["rate2"] </span>
+                            <span class="font-medium text-blue-600 ">@Session["rate2"] </span>
                         </div>
                         <div class="flex items-center mt-4">
-                            <span class="font-medium text-blue-600 dark:text-blue-500">1 star</span>
-                            <div class="w-2/3 h-5 mx-4 bg-gray-200 rounded dark:bg-gray-700">
+                            <span class="font-medium text-blue-600 ">1 star</span>
+                            <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
                                 <div class="h-5 bg-yellow-300 rounded" style="width: @Session["1"]"></div>
                             </div>
-                            <span class="font-medium text-blue-600 dark:text-blue-500">@Session["rate1"] </span>
+                            <span class="font-medium text-blue-600 ">@Session["rate1"] </span>
                         </div>
                     </div>
 
