--- a/Views/User/SignIn.cshtml
+++ b/Views/User/SignIn.cshtml
@@ -8,18 +8,18 @@
         @Html.AntiForgeryToken()
         <div class="flex flex-col items-center justify-center px-6 pt-8 mx-auto md:h-screen pt:mt-0">
             <div class="w-full max-w-xl p-6 space-y-8 sm:p-8 bg-white rounded-lg shadow">
-                <h2 class="text-2xl font-bold text-gray-900 dark:text-white">
+                <h2 class="text-2xl font-bold text-gray-900">
                     Sign in
                 </h2>
                 <form class="mt-8 space-y-6" action="#">
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div>
-                        <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your email</label>
+                        <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Your email</label>
                         @Html.EditorFor(model => model.email, new { htmlAttributes = new { @id = "login-name", @type = "text",@class = "bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" ,@style = "padding:1rem", @placeholder = "name@company.com", @required = "Fill your email" } })
                         @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
                     </div>
                     <div>
-                        <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your password</label>
+                        <label for="password" class="block mb-2 text-sm font-medium text-gray-900">Your password</label>
                         @Html.EditorFor(model => model.password, new { htmlAttributes = new { @id = "login-password", @type = "password", @class = "bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5", @style = "padding:1rem", @placeholder = "***********", @required = "Fill your password" } })
                         @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
                     </div>
