--- a/Views/User/SignUp.cshtml
+++ b/Views/User/SignUp.cshtml
@@ -9,26 +9,26 @@
         @Html.AntiForgeryToken()
         <div class="flex flex-col items-center justify-center px-6 pt-8 mx-auto md:h-screen pt:mt-0">
             <div class="w-full max-w-xl p-6 space-y-8 sm:p-8 bg-white rounded-lg shadow">
-                <h2 class="text-2xl font-bold text-gray-900 dark:text-white">
+                <h2 class="text-2xl font-bold text-gray-900">
                     Sign up
                 </h2>
                 <form class="mt-8 space-y-6" action="#">
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div>
-                        <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your email</label>
+                        <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Your email</label>
                         @*<input type="email" name="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="name@company.com" required>*@
                         @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @id = "login-name", @type = "text", @class = "bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5", @style = "padding:1rem", @placeholder = "name@company.com", @required = "Fill your email" } })
                         @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
 
                     </div>
                     <div>
-                        <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your password</label>
+                        <label for="password" class="block mb-2 text-sm font-medium text-gray-900">Your password</label>
                         @*<input type="password" name="password" id="password" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " required>*@
                         @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @id = "login-name", @type = "password", @class = "bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5", @style = "padding:1rem", @placeholder = "**********", @required = "Fill your password" } })
                         @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                     </div>
                     <div>
-                        <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Confirm password</label>
+                        <label for="password" class="block mb-2 text-sm font-medium text-gray-900">Confirm password</label>
                         @*<input type="password" name="password" id="password" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " required>*@
                         @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @id = "login-name", @type = "password", @class = "bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5", @style = "padding:1rem", @placeholder = "**********", @required = "Refill your password" } })
                         @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger" })
