--- a/Views/users/Index.cshtml
+++ b/Views/users/Index.cshtml
@@ -69,7 +69,7 @@
                     </a>
                 </div>
 
-                <div class="p-3 text-sm rounded-lg bg-red-600 text-white">
+                <div class="p-3 text-sm rounded-lg bg-danger text-white">
                     <a href="/users/Delete/@item.id_user" class="ms-1 text-white rounded">
                         <i class="fa-solid fa-xmark"></i>
                     </a>
