--- a/Views/Home/SearchPage.cshtml
+++ b/Views/Home/SearchPage.cshtml
@@ -106,7 +106,7 @@
                                         </div>
                                     </div>
 
-                                    <h5 class="mt-4 mb-3 flex leading-tight text-neutral-800 dark:text-neutral-50 justify-between">
+                                    <h5 class="mt-4 mb-3 flex leading-tight text-neutral-800 justify-between">
                                         <div class="text-xl">@Html.DisplayFor(modelItem => item.names)</div>
                                         <div class="flex flex-row">
                                             @for (int i = 0; i < (int)item.rate; i++)
