--- a/Views/Home/Details_Pro.cshtml
+++ b/Views/Home/Details_Pro.cshtml
@@ -137,14 +137,14 @@
                             {
 
 
-                                <a href="#">
-                                    <div style="text-decoration:none; color:black;text-align:center" class="p-3 rounded-md bg-blue-600 hover:bg-blue-700 text-light text-center font-medium" )">Out of Stock</div>
-                                </a>
+                                <button disabled>
+                                    <div style="text-decoration:none; color:black;text-align:center" class="p-3 rounded-md bg-blue-600 text-light text-center font-medium" )">Buy</div>
+                                </button>
 
 
-                                <a href="#">
-                                    <div style="text-decoration:none; color:black;text-align:center" class="p-3 rounded-md bg-gray-100 hover:bg-gray-100 font-medium" )">OUt of Stock</div>
-                                </a>
+                                <button disabled>
+                                    <div style="text-decoration:none; color:black;text-align:center" class="p-3 rounded-md bg-gray-100 font-medium" )">Add To Cart</div>
+                                </button>
                             }
                             else
                             {
@@ -230,41 +230,84 @@
                             <p class="ml-2 font-medium text-gray-900">@Session["avg"] out of 5</p>
                         </div>
                         <p class="font-medium text-gray-500">@Session["count"] Reviewers</p>
-                        <div class="flex items-center mt-4">
-                            <span class="font-medium text-blue-600 ">5 star</span>
-                            <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
-                                <div class="h-5 bg-yellow-300 rounded" style="width:@Session["5"]"></div>
+
+                        @if (Session["count"].Equals(0))
+                        {
+                            <div class="flex items-center mt-4">
+                                <span class="font-medium text-blue-600 ">5 star</span>
+                                <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
+                                    <div class="h-5 bg-yellow-300 rounded" style="width:0"></div>
+                                </div>
+                                <span class="font-medium text-blue-600 ">@Session["rate5"] </span>
                             </div>
-                            <span class="font-medium text-blue-600 ">@Session["rate5"] </span>
-                        </div>
-                        <div class="flex items-center mt-4">
-                            <span class="font-medium text-blue-600 ">4 star</span>
-                            <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
-                                <div class="h-5 bg-yellow-300 rounded" style="width: @Session["4"]"></div>
+                            <div class="flex items-center mt-4">
+                                <span class="font-medium text-blue-600 ">4 star</span>
+                                <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
+                                    <div class="h-5 bg-yellow-300 rounded" style="width:0"></div>
+                                </div>
+                                <span class="font-medium text-blue-600 ">@Session["rate4"] </span>
                             </div>
-                            <span class="font-medium text-blue-600 ">@Session["rate4"] </span>
-                        </div>
-                        <div class="flex items-center mt-4">
-                            <span class="font-medium text-blue-600 ">3 star</span>
-                            <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
-                                <div class="h-5 bg-yellow-300 rounded" style="width: @Session["3"]"></div>
+                            <div class="flex items-center mt-4">
+                                <span class="font-medium text-blue-600 ">3 star</span>
+                                <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
+                                    <div class="h-5 bg-yellow-300 rounded" style="width:0"></div>
+                                </div>
+                                <span class="font-medium text-blue-600 ">@Session["rate3"] </span>
                             </div>
-                            <span class="font-medium text-blue-600 ">@Session["rate3"] </span>
-                        </div>
-                        <div class="flex items-center mt-4">
-                            <span class="font-medium text-blue-600 ">2 star</span>
-                            <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
-                                <div class="h-5 bg-yellow-300 rounded" style="width: @Session["2"]"></div>
+                            <div class="flex items-center mt-4">
+                                <span class="font-medium text-blue-600 ">2 star</span>
+                                <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
+                                    <div class="h-5 bg-yellow-300 rounded" style="width:0"></div>
+                                </div>
+                                <span class="font-medium text-blue-600 ">@Session["rate2"] </span>
                             </div>
-                            <span class="font-medium text-blue-600 ">@Session["rate2"] </span>
-                        </div>
-                        <div class="flex items-center mt-4">
-                            <span class="font-medium text-blue-600 ">1 star</span>
-                            <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
-                                <div class="h-5 bg-yellow-300 rounded" style="width: @Session["1"]"></div>
+                            <div class="flex items-center mt-4">
+                                <span class="font-medium text-blue-600 ">1 star</span>
+                                <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
+                                    <div class="h-5 bg-yellow-300 rounded" style="width:0"></div>
+                                </div>
+                                <span class="font-medium text-blue-600 ">@Session["rate1"] </span>
                             </div>
-                            <span class="font-medium text-blue-600 ">@Session["rate1"] </span>
-                        </div>
+                        }
+                        else
+                        {
+                            <div class="flex items-center mt-4">
+                                <span class="font-medium text-blue-600 ">5 star</span>
+                                <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
+                                    <div class="h-5 bg-yellow-300 rounded" style="width:@Session["5"]"></div>
+                                </div>
+                                <span class="font-medium text-blue-600 ">@Session["rate5"] </span>
+                            </div>
+                            <div class="flex items-center mt-4">
+                                <span class="font-medium text-blue-600 ">4 star</span>
+                                <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
+                                    <div class="h-5 bg-yellow-300 rounded" style="width: @Session["4"]"></div>
+                                </div>
+                                <span class="font-medium text-blue-600 ">@Session["rate4"] </span>
+                            </div>
+                            <div class="flex items-center mt-4">
+                                <span class="font-medium text-blue-600 ">3 star</span>
+                                <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
+                                    <div class="h-5 bg-yellow-300 rounded" style="width: @Session["3"]"></div>
+                                </div>
+                                <span class="font-medium text-blue-600 ">@Session["rate3"] </span>
+                            </div>
+                            <div class="flex items-center mt-4">
+                                <span class="font-medium text-blue-600 ">2 star</span>
+                                <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
+                                    <div class="h-5 bg-yellow-300 rounded" style="width: @Session["2"]"></div>
+                                </div>
+                                <span class="font-medium text-blue-600 ">@Session["rate2"] </span>
+                            </div>
+                            <div class="flex items-center mt-4">
+                                <span class="font-medium text-blue-600 ">1 star</span>
+                                <div class="w-2/3 h-5 mx-4 bg-gray-100 rounded ">
+                                    <div class="h-5 bg-yellow-300 rounded" style="width: @Session["1"]"></div>
+                                </div>
+                                <span class="font-medium text-blue-600 ">@Session["rate1"] </span>
+                            </div>
+                        }
+
                     </div>
 
                     <p class="text-3xl font-bold my-4">Write a review</p>
