--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,6 +15,64 @@
 
   
 </head>
+<style>
+    .carousel {
+        width: 100vw;
+        height: 50vh;
+        overflow: hidden;
+        position: relative;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+    }
+
+        .carousel:hover .controls {
+            opacity: 1;
+        }
+
+        .carousel .controls {
+            opacity: 0;
+            display: flex;
+            position: absolute;
+            top: 50%;
+            left: 0;
+            z-index: 99999;
+            transition: all ease 0.5s;
+        }
+
+            .carousel .controls .control {
+                margin: 0 auto;
+                width: 50px;
+                height: 50px;
+                border-radius:50%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                background-color: rgba(255, 255, 255, 0.7);
+                opacity: 0.5;
+                transition: ease 0.3s;
+                cursor: pointer;
+            }
+
+                .carousel .controls .control:hover {
+                    opacity: 1;
+                }
+
+        .carousel .slides {
+            position: absolute;
+            top: 50%;
+            left: 0;
+            transform: translateY(-50%);
+            display: flex;
+            width: 100%;
+            transition: 1s ease-in-out all;
+        }
+
+            .carousel .slides .slide {
+                min-width: 100%;
+                min-height: 250px;
+                height: auto;
+            }
+ 
+</style>
 <body class="subpixel-antialiased">
     <header class="flex-col">
         @*icon-bar*@
