--- a/Views/Shopping/ShowToCart.cshtml
+++ b/Views/Shopping/ShowToCart.cshtml
@@ -118,7 +118,7 @@
                 @foreach (var item in Model)
                 {
                     <div class="row py-2">
-                        <img src="~/wwwroot/Images/Products/@item.product.images" class="col h-20" />
+                        <img src="~/wwwroot/Images/Products/@item.product.images" class="col w-10" />
                         <div class="col flex flex-wrap">
                             <div class="col grid-rows-4">
                                 <div class="font-medium">@Html.DisplayFor(model => item.product.names)</div>
