--- a/Views/orders/Index.cshtml
+++ b/Views/orders/Index.cshtml
@@ -62,7 +62,7 @@
                     @Html.DisplayFor(modelItem => item.promocode.code)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.id_user)
+                    @Html.DisplayFor(modelItem => item.user.names)
                 </td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.id_order }) |
