--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
         </div>
     </div>
     <script>
-        const delay = 3000; 
+        const delay = 3000;
 
         const slides = document.querySelector(".slides");
         const slidesCount = slides.childElementCount;
@@ -54,76 +54,94 @@
         });
 
     </script>
-   
+
     @*topfeatures*@
     <div class="text-center mt-1">
-        <div class="text-uppercase font-bold mb-2" style="font-size: 120px">top features of this year</div>
-        <div class="font-light w-50 mx-auto text-lg flex justify-between">
-            <span class="col">
+        <div class="text-uppercase font-bold mb-1" style="font-size: 124px">top features of this year</div>
+        <div class="font-light w-full mx-auto text-lg flex justify-between px-5">
+            <span class="w-25 text-sm text-start">
                 Crafted in part with recycled glass and ocean-bound plastic,
+                each phone comes in a recycled paper box. rafted in part with
+                recycled glass and ocean-bound plastic, in a recycled paper box
                 each phone comes in a recycled paper box.
             </span>
-            <span class="col">
-                Crafted in part with recycled glass and ocean-bound plastic,
-                each phone comes in a recycled paper box.
+            <span class="w-25 text-sm">
+                EST 2023. Privacy
+            </span>
+            <span class="w-50 text-end">
+                <a href="@Url.Action("SearchPage", "Home")" class="btn btn-outline-dark rounded-full text-xl px-5 py-2 font-light" style="width: fit-content;">
+                    VIEW
+                </a>
             </span>
         </div>
-        <a href="@Url.Action("SearchPage", "Home")" class="btn py-2 px-3 mx-auto bg-black text-white cursor-pointer my-5 font-semibold text-lg" style="width:fit-content;">
-            View More 🡥
-        </a>
     </div>
 
 
 
     @*product-mini-list*@
-<div class="grid grid-cols-4 gap-4 justify-content-between mx-auto px-4" style="margin-bottom:3em; margin-top:3em">
-    @foreach (var item in Model)
-    {
-        if (item.id_product <= 67)
+    <div class="grid grid-cols-4 gap-4 justify-content-between mx-auto px-4" style="margin-bottom:3em; margin-top:3em">
+        @foreach (var item in Model)
         {
+            if (item.id_product <= 67)
+            {
 
-            <div class="flex justify-center text-md w-full">
-                <div class="block max-w-sm rounded-lg bg-white shadow-md w-full">
-                    @*<a href="#!">*@
-                    <img class="rounded-t-lg mx-auto object-center"
-                         style="height: 250px"
-                         src="~/wwwroot/Images/Products/@item.images"
-                         alt="" />
-                    @*</a>*@
-                    <div class="p-3 font-medium">
-                        <div class="flex flex-row justify-between pb-3 border-bottom align-items-center">
-                            <p class="text-2xl">$@Html.DisplayFor(modelItem => item.price)</p>
-                            <div class="bg-danger py-2 px-3 rounded-md text-white">
-                                0%
-                            </div>
-                        </div>
+                <div class="flex justify-center text-md w-full">
+                    <div class="block max-w-sm rounded-lg bg-white shadow-md w-full">
+                        @*<a href="#!">*@
+                        <img class="rounded-t-lg mx-auto object-center"
+                             style="height: 250px"
+                             src="~/wwwroot/Images/Products/@item.images"
+                             alt="" />
+                        @*</a>*@
+                        <div class="p-3 font-medium">
+                            <div class="flex flex-row justify-between pb-3 border-bottom align-items-center">
 
-                        <h5 class="mt-4 mb-3 flex leading-tight text-neutral-800 justify-between">
-                            <div class="text-xl">@Html.DisplayFor(modelItem => item.names)</div>
-                            <div class="flex flex-row">
-                                @for (int i = 0; i < (int)item.rate; i++)
+                                @if (item.id_promo == null)
                                 {
-                                    <i class="fa-solid fa-star text-yellow-500"></i>
+                                    <p class="text-2xl">$@Html.DisplayFor(modelItem => item.price)</p>
+                                    <div class="bg-danger py-2 px-3 rounded-md text-white">
+                                        0%
+                                    </div>
                                 }
-                                @if ((double)item.rate > (int)item.rate)
+                                else
                                 {
-                                    <i class="fa-solid fa-star-half text-yellow-500"></i>
+                                    <p class="text-2xl">$@Html.DisplayFor(modelItem => item.discount)</p>
+                                    <del class="text-xl text-red-600">@item.price.00$</del>
+                                    <div class="bg-danger py-2 px-3 rounded-md text-white">
+                                        @item.promocode.discount_price%
+                                    </div>
                                 }
-                            </div>
-                        </h5>
-                        <div class="my-3 flex text-xs items-center justify-between">
-                            <div class="text-start">
-                                <span class="p-2 rounded-full" style="border: 2px solid #0026ff; color: #0026ff">@Html.DisplayFor(modelItem => item.brand)</span>
-                                <span class="p-2 rounded-full" style="border: 2px solid #ffd800; color: #ffd800 ">@Html.DisplayFor(modelItem => item.color)</span>
+
+
                             </div>
 
-                            <div>
-                                <a href="/Home/Details_Pro/@item.id_product" class="py-2 px-3 text-sm bg-blue-600 text-white rounded-full">View</a>
+                            <h5 class="mt-4 mb-3 flex leading-tight text-neutral-800 justify-between">
+                                <div class="text-xl">@Html.DisplayFor(modelItem => item.names)</div>
+                                <div class="flex flex-row">
+                                    @for (int i = 0; i < (int)item.rate; i++)
+                                    {
+                                        <i class="fa-solid fa-star text-yellow-500"></i>
+                                    }
+                                    @if ((double)item.rate > (int)item.rate)
+                                    {
+                                        <i class="fa-solid fa-star-half text-yellow-500"></i>
+                                    }
+                                </div>
+                            </h5>
+                            <div class="my-3 flex text-xs items-center justify-between">
+                                <div class="text-start">
+                                    <span class="p-2 rounded-full" style="border: 2px solid #0026ff; color: #0026ff">@Html.DisplayFor(modelItem => item.brand)</span>
+                                    <span class="p-2 rounded-full" style="border: 2px solid #ffd800; color: #ffd800 ">@Html.DisplayFor(modelItem => item.color)</span>
+                                </div>
+
+                                <div>
+                                    <a href="/Home/Details_Pro/@item.id_product" class="py-2 px-3 text-sm bg-blue-600 text-white rounded-full">View</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+
             <!--<div class="flex justify-center text-md w-full">
                 <div class="block max-w-sm rounded-lg bg-white shadow-md w-full">-->
             @*<a href="#!">*@
@@ -182,16 +200,16 @@
             </div>-->
         }
     }
-</div>
+            </div>
 
-    @*samsunng-iphone*@
-    <div class="grid grid-cols-2 my-5">
-        <img src="~/wwwroot/Images/Others/Group 51.png" class="object-cover w-full" href="@Url.Action("Search", "Home", new {id = 1})" />
-        <img src="~/wwwroot/Images/Others/Group 52.png" class="object-cover w-full" href="@Url.Action("Search", "Home", new {id = 1})" />
-    </div>
+            @*samsunng-iphone*@
+            <div class="grid grid-cols-2 my-5">
+                <img src="~/wwwroot/Images/Others/Group 51.png" class="object-cover w-full" href="@Url.Action("Search", "Home", new {id = 1})" />
+                <img src="~/wwwroot/Images/Others/Group 52.png" class="object-cover w-full" href="@Url.Action("Search", "Home", new {id = 1})" />
+            </div>
 
-    <div class="mx-auto w-50 mt-6">
-        <img src="~/wwwroot/Images/Others/Frame 32.png" class="object-cover object-center" />
-    </div>
+            <div class="mx-auto w-50 mt-6">
+                <img src="~/wwwroot/Images/Others/Frame 32.png" class="object-cover object-center" />
+            </div>
 
-</main>
+        </main>
